Updated task modal menu and fix overflow hidden not work problem

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 html, body {
     overflow-x: hidden;
+    height: 100% !important;
 }
 
 header {
@@ -9,7 +10,6 @@ header {
 
 .pusher {
     height: 100% !important;
-
 }
 
 .thin-padding {
